# supertux

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  run.sh  vcpkg.json
.ci_scripts/: package.sh
.github/workflows/: android.yml  flatpak.yml  fork-tests.yml  freebsd.yml  gnulinux.yml  lint.yml  macos.yml  scripting.yml  wasm.yml  windows.yml
mk/android/app/: build.gradle
patches/submodules/: sdl_ttf_sdl3.patch
scripts/: apply_submodule_patches.sh  build_gate.sh  check_tests_sanitized.sh  coverage_gate.py  rebase_prs.sh
src/: main.cpp
src/addon/: addon.cpp  addon_manager.cpp  downloader.cpp  md5.cpp
src/audio/: ogg_sound_file.cpp  sound_file.cpp  sound_manager.cpp  stream_sound_source.cpp  wav_sound_file.cpp
src/badguy/: angrystone.cpp  badguy.cpp  badguy.hpp  boss.cpp  bouncing_snowball.cpp  captainsnowball.cpp  corrupted_granito.cpp  corrupted_granito_big.cpp  crusher.cpp  darttrap.cpp  dispenser.cpp  dive_mine.cpp  fish_chasing.cpp  fish_swimming.cpp  flame.cpp  flyingsnowball.cpp  ghosttree.cpp  ghosttree_attack.cpp  goldbomb.cpp  granito.cpp  granito_big.cpp  haywire.cpp  igel.cpp  kamikazesnowball.cpp  kugelblitz.cpp  livefire.cpp  mole.cpp  mole_rock.cpp  mrbomb.cpp  mriceblock.cpp  mrtree.cpp  owl.cpp  plant.cpp  rcrystallo.cpp  root_sapling.cpp  scrystallo.cpp  skydive.cpp  snail.cpp  sspiky.cpp  stumpy.cpp  (+10 more)
src/collision/: collision.cpp  collision.hpp  collision_movement_manager.cpp  collision_system.cpp
src/control/: joystick_manager.cpp  keyboard_config.cpp  keyboard_manager.cpp  mobile_controller.cpp  mobile_controller.hpp
src/editor/: button_widget.cpp  button_widget.hpp  editor.cpp  editor.hpp  layer_icon.cpp  layers_widget.cpp  marker_object.cpp  node_marker.cpp  object_group.cpp  object_icon.cpp  object_menu.cpp  object_option.cpp  object_settings.cpp  object_settings.hpp  overlay_widget.cpp  particle_editor.cpp  scroller_widget.cpp  tilebox.cpp  toolbar_widget.cpp  toolbox_widget.cpp  toolbox_widget.hpp
src/gui/: dialog.cpp  item_back.cpp  item_color_picker_2d.cpp  item_colorchannel_rgba.cpp  item_colordisplay.cpp  item_floatfield.cpp  item_horizontalmenu.cpp  item_images.cpp  item_script.cpp  item_script_line.cpp  item_stringselect.cpp  item_textfield.cpp  menu.cpp  menu_filesystem.cpp  menu_manager.cpp  menu_script.cpp  menu_string_array.cpp  mousecursor.cpp  notification.cpp  notification.hpp
src/interface/: control_button.cpp  control_checkbox.cpp  control_scrollbar.cpp  control_textbox.cpp
src/math/: bezier.cpp  easing.cpp  rectf.hpp  sizef.hpp
src/object/: ambient_light.cpp  background.cpp  bicycle_platform.cpp  bigsnowball.cpp  block.cpp  bonus_block.cpp  bouncy_coin.cpp  brick.cpp  bullet.cpp  bullet.hpp  bumper.cpp  camera.cpp  candle.cpp  circleplatform.cpp  cloud_particle_system.cpp  coin.cpp  coin_explode.cpp  coin_rain.cpp  conveyor_belt.cpp  custom_particle_system.cpp  decal.cpp  draggable_region.cpp  draggable_region.hpp  endsequence_walk.cpp  explosion.cpp  fallblock.cpp  firefly.cpp  fireworks.cpp  ghost_particle_system.cpp  gradient.cpp  infoblock.cpp  key.cpp  level_time.cpp  magicblock.cpp  moving_sprite.cpp  particle_zone.cpp  particles.cpp  particlesystem.cpp  particlesystem_interactive.cpp  path.cpp  (+23 more)
src/physfs/: ifile_streambuf.cpp  ofile_streambuf.cpp  physfs_sdl.cpp  util.cpp
src/sprite/: sprite.cpp  sprite_data.cpp  sprite_manager.cpp
src/squirrel/: squirrel_environment.cpp  supertux_api.cpp
src/supertux/: autotile.cpp  autotile_parser.cpp  console.cpp  console.hpp  controller_hud.cpp  error_handler.cpp  flip_level_transformer.cpp  game_object.cpp  game_object_manager.cpp  game_object_manager.hpp  game_session.cpp  gameconfig.cpp  info_box.cpp  info_box_line.cpp  level.cpp  level_parser.cpp  levelintro.cpp  levelset.cpp  levelset_screen.cpp  main.cpp  object_factory.hpp  physic.cpp  player_status.cpp  player_status_hud.cpp  resources.cpp  savegame.cpp  screen_manager.cpp  sector.cpp  sector_parser.cpp  shrinkfade.cpp  statistics.cpp  tile.cpp  tile_set.cpp  tile_set_parser.cpp  timer.cpp  world.cpp
src/supertux/menu/: addon_browse_menu.cpp  addon_menu.cpp  addon_preview_menu.cpp  cheat_apply_menu.cpp  contrib_levelset_menu.cpp  contrib_menu.cpp  debug_menu.cpp  download_dialog.cpp  editor_converters_menu.cpp  editor_delete_level_menu.cpp  editor_delete_levelset_menu.cpp  editor_level_menu.cpp  editor_level_select_menu.cpp  editor_levelset_select_menu.cpp  (+16 more)
src/trigger/: climbable.cpp  door.cpp  secretarea_trigger.cpp
src/util/: colorspace_oklab.cpp  fade_helper.cpp  obstackpp.hpp  reader.cpp  script_manager.cpp  string_util.cpp  timelog.cpp  utf8_iterator.cpp
src/video/: bitmap_font.cpp  canvas.cpp  compositor.cpp  glutil.hpp  sdl_surface.cpp  sdlbase_video_system.cpp  surface.cpp  texture_manager.cpp  ttf_font.cpp  ttf_surface.cpp  ttf_surface_manager.cpp  viewport.cpp
src/worldmap/: camera.cpp  level_tile.cpp  tux.cpp  world_select.cpp  worldmap.cpp  worldmap_sector.cpp  worldmap_state.cpp
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  e2e_real_window.sh  smoke_fullscreen.sh  smoke_gameplay.sh  smoke_level_load.sh  smoke_render_pixels.sh  smoke_renderer_choice.sh
tests/unit/: CMakeLists.txt  aatriangle_test.cpp  anchor_point_test.cpp  anchor_point_test_stub.cpp  bezier_test.cpp  bezier_test_stub.cpp  collision_geom_test.cpp  collision_geom_test_stub.cpp  collision_math_test.cpp  collision_module_test.cpp  color_parse_test.cpp  color_parse_test_stub.cpp  colorspace_oklab_test.cpp  colorspace_oklab_test_stub.cpp  dynamic_scoped_test.cpp  easing_test.cpp  file_system_test.cpp  file_system_test_stub.cpp  line_iterator_test.cpp  md5_test.cpp  physic_integration_test.cpp  physic_movement_test.cpp  physic_test.cpp  physic_test_stub.cpp  reader_test_stub.cpp  rect_test.cpp  rectf_test.cpp  sdl3_api_test.cpp  sdl_video_mode_test.cpp  sexp_value_test.cpp  size_test.cpp  sizef_test.cpp  string_util_st_test.cpp  string_util_test.cpp  tile_test.cpp  tile_test_stub.cpp  uid_test_stub.cpp  utf8_iterator_test.cpp  utf8_iterator_test_stub.cpp  writer_test.cpp  (+1 more)
(+9 files in other folders)
